--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-pandas==0.20.3
-simplejson==3.11.1
-plotly==3.10.0 #required for scripts/plot
+pandas>=0.20.3
+simplejson>=3.11.1
+plotly>=3.10.0 #required for scripts/plot
+htm.core>=2.0.18
