--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - pip install --upgrade pip
 
 install:
-  - pip install -r requirements.txt -i https://test.pypi.org/simple/ 
+  - pip install -r requirements.txt --extra-index-url https://test.pypi.org/simple/ 
   - python setup.py install --force
 
 # Run tests
